--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 <body>
     <div id="top-sec">
         <h1 id="title">Metric/Imperial Unit Conversion</h1>
-        <div id="input-container">
-            <p id="input-figure"></p>
-        </div>
+        <input type="number" id="input-num">
         <button id="convert-btn">Convert</button>
     </div>
     <div id="bottom-sec">
