auto dark light mod added

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <div id="bottom-sec">
         <div class="output-container">
             <p class="unit">Length (Meter/Feet)</p>
-            <p id="length-output"></p>
+            <p id="length-output" class="res"></p>
         </div>
         <div class="output-container">
             <p class="unit">Volume (Liters/Gallons)</p>
-            <p id="volume-output"></p>
+            <p id="volume-output" class="res"></p>
         </div>
         <div class="output-container">
             <p class="unit">Mass (Kilograms/Pounds)</p>
-            <p id="mass-output"></p>
+            <p id="mass-output" class="res"></p>
         </div>
     </div>
     
